Some fixes on images alignment (comments and images section).

--- a/css/main.css
+++ b/css/main.css
@@ -195,19 +195,69 @@ div.menu3sub
     border:1px solid #CAD0DB;
     background:#E9ECF0;
 }
-img.uploaded_image {
-    padding: 5px;
+span.clear_left {
+    clear: left; 
+    display: block;
+}
+.uploaded_image_and_download {
+    display: block;
+    float: left;
+    width: 110px;
+    height: 105px;
+    vertical-align: middle;
+    text-align: center;
+    padding-top: 5px;
+}
+.uploaded_image_and_download_inner {
+    display: inline-block;
+    position: relative;
     width: 100px;
-    max-height: 100px;
+    height: 100px;
+}
+a.uploaded_image {
+    display: inline-block;
+    position: absolute;
+    left:0;
+    bottom: 0;
+}   
+img.uploaded_image {
+    display: inline-block;
+    position: absolute;
+    -webkit-box-shadow: 5px 5px 50px -6px rgba(50, 50, 50, 0.3);
+    -moz-box-shadow: 5px 5px 50px -6px rgba(50, 50, 50, 0.3);
+    box-shadow: 5px 5px 50px -6px rgba(50, 50, 50, 0.3);
+    border-radius: 2px 0px 2px 0px;
+    -moz-border-radius: 2px 0px 2px 0px;
+    -webkit-border-radius: 2px 0px 2px 0px;
+    border: 0;
+    left:0;
+    bottom: 0;
 }
 a.download_button {
-    padding:0;
-    margin-left: -10px;
+    display: inline-block;
+    position: absolute;
+    left:0;
+    bottom: 0;
 }
 img.download_button {
+    display: inline-block;
+    position: absolute;
+    left:0;
+    bottom: 0;
     width:20px;
-    padding-left:0;
-    padding-right:5px;
+    border-radius: 2px 2px 2px 2px;
+    -moz-border-radius: 2px 2px 2px 2px;
+    -webkit-border-radius: 2px 2px 2px 2px;
+    background-color: #fff;
+}
+a.uploaded_image_download_only,
+img.uploaded_image_download_only {
+    background-color: #fff;
+    display: inline-block;
+    height: 100px;
+    position: absolute;
+    left:0;
+    bottom: 0;
 }
 li.old_message {
     display: none;
